[package]
name = "sleepview"
version = "2.0.3"
edition = "2018"
authors = ["Iona Erofeeff <iedevfeedback@gmail.com>"]
rust-version = "1.74.1"
description = "Sleep progress output in the terminal."
repository = "https://github.com/ionarevamp/sleepview.git"
readme = "README.md"
license = "MIT"
keywords = ["countdown","timer","terminal","console"]
categories = ["command-line-utilities"]

[profile.release]
strip = "symbols"
opt-level = "z"
codegen-units = 1
lto = true

[profile.dev]
opt-level = 2

[features]
gold = []
mold = []
cortex-a8 = ["gold"]
arm1176 = ["gold"]

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
crossterm = "0.27.0"
env_logger = "0.11.3"
log = { version = "0.4.22", features = ["max_level_debug"] }
 
